Fixed nav bar alignment

--- a/public/main.scss
+++ b/public/main.scss
@@ -26,16 +26,16 @@ nav {
   left: 0;
   width: 100%;
   box-sizing: border-box;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
   font-size: 24px;
   background: var(--bg-color);
-  padding: 10px 100px;
+  padding: 10px 0;
   box-shadow: 0 2px 10px var(--shadow-color);
   backdrop-filter: blur(15px);
   a {
+    text-align: center;
     text-decoration: unset;
     transition: text-shadow 0.2s ease-out;
     &:hover {
